[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/menu/codex.gd" type="Script" id=1]
[ext_resource path="res://scripts/codex/codex_entry.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemies/morris/idle/frame_7.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemies/morris/idle/frame_11.png" type="Texture" id=4]
[ext_resource path="res://sprites/enemies/morris/idle/frame_10.png" type="Texture" id=5]
[ext_resource path="res://sprites/enemies/morris/idle/frame_9.png" type="Texture" id=6]
[ext_resource path="res://sprites/enemies/morris/idle/frame_8.png" type="Texture" id=7]
[ext_resource path="res://scenes/menu/codex_entry.tscn" type="PackedScene" id=8]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=9]
[ext_resource path="res://sprites/hud/1.png" type="Texture" id=10]
[ext_resource path="res://sprites/hud/2.png" type="Texture" id=11]
[ext_resource path="res://fonts/Hardpixel-nn51.otf" type="DynamicFontData" id=12]

[sub_resource type="AnimatedTexture" id=2]
frames = 5
fps = 5.0
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 6 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 5 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 4 )
frame_4/delay_sec = 0.0

[sub_resource type="Resource" id=1]
script = ExtResource( 2 )
name = "Morris"
icon = SubResource( 2 )
health = 5
contact_damage = 1
description = "Морис - один из первых сетевых червей, распространявшихся через Интернет. Написан аспирантом Корнельского университета Робертом Таппаном Моррисом и запущен 2 ноября 1988 года в Массачусетском технологическом институте.
Это был первый вирус, получивший значительное внимание в средствах массовой информации. Морис поразил более 6000 компьютеров, но его действие было практически безвредным"

[sub_resource type="Resource" id=3]
script = ExtResource( 2 )
name = "Not morris"
icon = SubResource( 2 )
health = 5
contact_damage = 1
description = "not a cool creature"

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 32.0
margin_right = 32.0
margin_top = 32.0
margin_bottom = 32.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 31.0
margin_right = 31.0
margin_top = 31.0
margin_bottom = 31.0

[sub_resource type="DynamicFont" id=6]
resource_local_to_scene = true
size = 11
font_data = ExtResource( 12 )

[node name="codex" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
entry_scene = ExtResource( 8 )
entries = [ SubResource( 1 ), SubResource( 3 ) ]

[node name="color_rect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.247059 )

[node name="item_list" type="ItemList" parent="."]
margin_left = 416.0
margin_top = 19.0
margin_right = 609.0
margin_bottom = 320.0
custom_fonts/font = ExtResource( 9 )
custom_styles/selected_focus = SubResource( 5 )
custom_styles/bg = SubResource( 4 )

[node name="nine_patch_rect" type="NinePatchRect" parent="."]
margin_left = 27.0
margin_top = 19.0
margin_right = 400.0
margin_bottom = 320.0
texture = ExtResource( 10 )
patch_margin_left = 31
patch_margin_top = 31
patch_margin_right = 31
patch_margin_bottom = 31
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="icon" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = 41.0
margin_right = 96.0
margin_bottom = 73.0
rect_scale = Vector2( 3, 3 )

[node name="name" type="Label" parent="."]
margin_left = 208.0
margin_top = 64.0
margin_right = 340.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 9 )
text = "Select someone"

[node name="description" type="Label" parent="."]
margin_left = 48.0
margin_top = 144.0
margin_right = 384.0
margin_bottom = 339.0
custom_fonts/font = SubResource( 6 )
text = "Морис - один из первых сетевых червей, распространявшихся через Интернет. Написан аспирантом Корнельского университета Робертом Таппаном Моррисом и запущен в 1988 году в Массачусетском технологическом институте.
Это был первый вирус, получивший значительное внимание в средствах массовой информации. Морис поразил более 6000 компьютеров, но его действие было практически безвредным"
autowrap = true

[node name="health" type="Label" parent="."]
margin_left = 208.0
margin_top = 95.0
margin_right = 248.0
margin_bottom = 115.0
custom_fonts/font = ExtResource( 9 )
text = "h: 0"

[node name="contact_damage" type="Label" parent="."]
margin_left = 263.0
margin_top = 95.0
margin_right = 306.0
margin_bottom = 115.0
custom_fonts/font = ExtResource( 9 )
text = "cd: 0"

[connection signal="item_selected" from="item_list" to="." method="_on_item_list_item_selected"]
